fixed scrollbar for scrollable elements

--- a/front/src/Styles/Chat/Chat.scss
+++ b/front/src/Styles/Chat/Chat.scss
@@ -33,7 +33,7 @@
             position: relative;
             list-style-type: none;
             margin-right: 30px;
-            overflow-y: scroll;
+            @include overflowScroll("y");
             &-elem {
                 .collapse-button {
                     @include flex-row-alignCenter;
@@ -188,12 +188,12 @@
             }
 
             ul {
-                overflow-y: scroll;
                 margin: 0;
                 padding: 20px 0;
                 height: 90%;
                 display: flex;
                 flex-direction: column;
+                @include overflowScroll("y");
                 .message-server {
                     margin: 0 auto;
                 }
@@ -293,7 +293,7 @@
         .users-sidebar {
             @include width-height(300px, 100%);
             background-color: $DarkPalette;
-            overflow-y: auto;
+            @include overflowScroll("y");
             &-wrapper {
                 margin: 10px;
                 h3 {
@@ -348,8 +348,8 @@
         gap: 10px;
         margin: auto;
         padding: 16px 0;
-        overflow-y: scroll;
         height: 100%;
+        @include overflowScroll("y");
 
         .sidebar-button {
             display: none;
