--- a/front/src/Styles/Sign.scss
+++ b/front/src/Styles/Sign.scss
@@ -14,6 +14,11 @@
     text-align: center;
     background: url('../Images-Icons//Backgrounds/background-42.jpg') no-repeat center fixed;
     background-size: cover;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+        display: none;
+    }
 
     .auth-wrapper {
         display: flex;
